Update to Minecraft 1.21 > 0.6.0